<resources>
    <!-- common app -->
    <string name="app_name" translatable="false">Runners Calculator</string>
    <string name="author" translatable="false">by @skidrupert,</string>

    <!-- defaults -->
    <string name="default_age" translatable="false">0</string>
    <string name="default_distance_m" translatable="false">0</string>
    <string name="default_distance_pace" translatable="false">-</string>
    <string name="default_heart_rate" translatable="false">0</string>
    <string name="default_pace" translatable="false">0:00</string>
    <string name="default_speed_distance_km" translatable="false">0.0</string>
    <string name="default_time" translatable="false">00:00:00</string>
    <string name="default_vo2max" translatable="false">0.0</string>

    <!-- units -->
    <string name="unit_distance" translatable="false">km</string>
    <string name="unit_kilometres">kilometres</string>
    <string name="unit_meters">metres</string>
    <string name="unit_mile" translatable="false">mile</string>
    <string name="unit_miles" translatable="false">miles</string>
    <string name="unit_pace" translatable="false">min/km</string>
    <string name="unit_speed" translatable="false">km/h</string>

    <!-- results -->
    <string name="calculate_distance_results" translatable="false"> {result}{distance}</string>
    <string name="calculate_pace_results" translatable="false"> {result}{pace}</string>
    <string name="calculate_time_results" translatable="false"> {result}</string>
    <string name="hr_zone_results" translatable="false">: {hr-range}bpm ({hr-range-percentage}%)</string>
    <string name="pace_to_speed_results" translatable="false"> {pace} = {result}{speed}</string>
    <string name="speed_to_pace_results" translatable="false"> {speed} = {result}{pace} </string>
    <string name="vo2max_estimate_results" translatable="false"> m ~ {result} mL/kg/min</string>

    <!-- titles -->
    <string name="calculate_xx">Calculate %s</string>
    <string name="convert_xx_to_xx">Convert %s to %s</string>
    <string name="estimate_xx">Estimate %s</string>
    <string name="heart_rate_zones">Heart rate zones</string>
    <string name="developers_achievements">Developers achievements</string>

    <!-- descriptions -->
    <string name="heart_rate_zones_description">Calculate your heart rate zones from your maximum heart rate or age combined with your resting heart rate and training experience. If age is used the maximum heart rate will be calculated as 220 - your age, which is a less accurate alternative. The resting heart rate is needed because the Karvonen method is used to calculate the different heart rate zones.</string>
    <string name="vo2max_estimate_description">Calculate an estimated VO2max by giving a cooper test result in meters.</string>
    <string name="finish_time_predictions_description">Calculate estimated finish times for several common running distances from your time on 5 or 10km. These calculations are done using the Peter Riegel formula, which is widely used and accepted. However the estimates tends to fall away towards the extremes so the results for the shorter and longer distances may be somewhat unreliable.</string>

    <!-- hints -->
    <string name="hint_distance">Distance(%s)</string>
    <string name="hint_pace">Pace(%s)</string>
    <string name="hint_time">Time(%s)</string>

    <!-- achievements -->
    <string name="pr_cooper_test_title">Cooper test:</string>
    <string name="pr_1km_title" translatable="false">1 km:</string>
    <string name="pr_1mi_title" translatable="false">1 mile:</string>
    <string name="pr_5km_title" translatable="false">5 km:</string>
    <string name="pr_10km_title" translatable="false">10 km:</string>
    <string name="pr_half_marathon_title">Half marathon:</string>
    <string name="pr_kanonloppet_title" translatable="false">Kanonloppet:</string>
    <string name="pr_marathon_title">Marathon:</string>
    <string name="pr_backyard_ultra_title" translatable="false">Backyard ultra:</string>
    <string name="pr_ultravasan_title" translatable="false">Ultravasan:</string>
    <string name="pr_cykelvasan_os_title" translatable="false">Cykelvasan ÖS:</string>
    <string name="pr_vasaloppet_os_title" translatable="false">Vasaloppet ÖS:</string>
    <string name="pr_vasaloppstrippeln_title" translatable="false">Vasaloppstrippeln 90km:</string>

    <!-- results -->
    <string name="result_cooper_test" translatable="false">2900m</string>
    <string name="result_1km" translatable="false">3:52</string>
    <string name="result_1mi" translatable="false">6:35</string>
    <string name="result_5km" translatable="false">22:41</string>
    <string name="result_10km" translatable="false">46:46</string>
    <string name="result_half_marathon" translatable="false">1:48:07</string>
    <string name="result_kanonloppet" translatable="false">1:57:40</string>
    <string name="result_marathon" translatable="false">4:17:32</string>
    <string name="result_backyard_ultra">9 laps</string>
    <string name="result_ultravasan" translatable="false">11:53:41</string>
    <string name="result_cykelvasan_os" translatable="false">4:43:28</string>
    <string name="result_vasaloppet_os" translatable="false">6:57:44</string>
    <string name="result_vasaloppstrippeln" translatable="false">23:38:37</string>

    <string name="age">Age</string>
    <string name="distance">Distance</string>
    <string name="experienced_runner">Experienced runner</string>
    <string name="finish_times">Finish times</string>
    <string name="heart_rate_zone_5">HR-zone 5</string>
    <string name="heart_rate_zone_4">HR-zone 4</string>
    <string name="heart_rate_zone_3">HR-zone 3</string>
    <string name="heart_rate_zone_2">HR-zone 2</string>
    <string name="heart_rate_zone_1">HR-zone 1</string>
    <string name="maximum_heart_rate">Maximum heart rate</string>
    <string name="pace">Pace</string>
    <string name="resting_heart_rate">Resting heart rate</string>
    <string name="time">Time</string>
    <string name="vo2max" translatable="false">VO2max</string>

    <!-- distance -->
    <string name="distance_100_unit" translatable="false">100 {unit}</string>
    <string name="distance_200_unit" translatable="false">200 {unit}</string>
    <string name="distance_400_unit" translatable="false">400 {unit}</string>
    <string name="distance_800_unit" translatable="false">800 {unit}</string>
    <string name="distance_1500_unit" translatable="false">1500 {unit}</string>
    <string name="distance_1_unit" translatable="false">1 {unit}</string>
    <string name="distance_2_unit" translatable="false">2 {unit}</string>
    <string name="distance_5_unit" translatable="false">5 {unit}</string>
    <string name="distance_10_unit" translatable="false">10 {unit}</string>
    <string name="distance_half_marathon">Half Marathon</string>
    <string name="distance_marathon">Marathon</string>
    <string name="distance_50_unit" translatable="false">50 {unit}</string>

    <!-- keyboard -->
    <string name="keyboard_0" translatable="false">0</string>
    <string name="keyboard_1" translatable="false">1</string>
    <string name="keyboard_2" translatable="false">2</string>
    <string name="keyboard_3" translatable="false">3</string>
    <string name="keyboard_4" translatable="false">4</string>
    <string name="keyboard_5" translatable="false">5</string>
    <string name="keyboard_6" translatable="false">6</string>
    <string name="keyboard_7" translatable="false">7</string>
    <string name="keyboard_8" translatable="false">8</string>
    <string name="keyboard_9" translatable="false">9</string>
    <string name="keyboard_separator" translatable="false">:</string>

    <!-- links -->
    <string name="url_cooper_test" translatable="false">https://en.wikipedia.org/wiki/Cooper_test</string>
    <string name="url_karvonen_method" translatable="false">https://en.wikipedia.org/wiki/Heart_rate#Karvonen_method</string>
    <string name="url_peter_riegel_method" translatable="false">https://en.wikipedia.org/wiki/Peter_Riegel#Race_time_prediction</string>

    <!-- other -->
    <string name="filter_view_runners_calculator" translatable="false">View Runners Calculator</string>
    <string name="image_link_content_descriptor" translatable="false">Link image</string>
    <string name="image_close_content_descriptor" translatable="false">Close image</string>
    <string name="image_medal_ribbon_descriptor" translatable="false">Medal with ribbon image</string>
</resources>
