<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/easter_egg_dialog_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/easter_egg_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_easter_egg_dialog_iv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/image_close_content_descriptor"
        android:src="@drawable/close" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/content_card_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/medal_ribbon_iv"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_medal_ribbon_descriptor"
            android:src="@drawable/medal_ribbon" />

        <TextView
            android:id="@+id/developer_achievements_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medal_ribbon_iv"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/developers_achievements"
            android:textColor="@color/colorHeadingText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/developer_achievements_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developer_achievements_tv"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_cooper_test_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_cooper_test_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_cooper_test_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_cooper_test"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_1km_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_1km_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_1km_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_1km"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_1mi_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_1mi_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_1mi_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_1mi"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_5km_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_5km_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_5km_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_5km"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_10km_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_10km_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_10km_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_10km"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_half_marathon_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_half_marathon_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_half_marathon_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_half_marathon"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_kanonloppet_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_kanonloppet_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_kanonloppet_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_kanonloppet"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_marathon_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_marathon_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_marathon_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_marathon"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_backyard_ultra_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_backyard_ultra_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_backyard_ultra_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_backyard_ultra"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_ultravasan_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_ultravasan_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_ultravasan_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_ultravasan"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_cykelvasan_os_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_cykelvasan_os_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_cykelvasan_os_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_cykelvasan_os"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_vasaloppet_os_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_vasaloppet_os_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_vasaloppet_os_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_vasaloppet_os"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pr_vasaloppstrippeln_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/pr_vasaloppstrippeln_title"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_vasaloppstrippeln_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/result_vasaloppstrippeln"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>

    </RelativeLayout>

</RelativeLayout>