<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/runners_keyboard_gl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:columnCount="3">

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_1"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_2"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_3"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_4"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_5"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_6"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_7"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_7"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_8"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_8"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_9"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_9"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_separator"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_separator"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_0"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/keyboard_button_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/keyboard_0"
        android:textColor="@color/colorButtonText"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_del"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/keyboard_button_backspace_selector" />

</GridLayout>