<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversions_content_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/content_card_background"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:paddingTop="4dp"
    android:paddingEnd="6dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/pace_to_speed_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/convert_xx_to_xx"
        android:textColor="@color/colorHeadingText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/pace_to_speed_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ax.stardust.runcalc.component.KeyboardlessEditText
            android:id="@+id/pace_to_speed_et"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_default"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:gravity="center_horizontal"
            android:hint="@string/default_pace"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/colorInputText"
            android:textCursorDrawable="@drawable/input_cursor_default" />

        <TextView
            android:id="@+id/pace_to_speed_results_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="100"
            android:fontFamily="@font/open_sans"
            android:text="@string/pace_to_speed_results"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/speed_to_pace_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/convert_xx_to_xx"
        android:textColor="@color/colorHeadingText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/speed_to_pace_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ax.stardust.runcalc.component.KeyboardlessEditText
            android:id="@+id/speed_to_pace_et"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_default"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:gravity="center_horizontal"
            android:hint="@string/default_speed_distance"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/colorInputText"
            android:textCursorDrawable="@drawable/input_cursor_default" />

        <TextView
            android:id="@+id/speed_to_pace_results_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="100"
            android:fontFamily="@font/open_sans"
            android:text="@string/speed_to_pace_results"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>